# daggncrawlerweb

./: README.md  pyproject.toml  requirements.txt
app/: crawl.py  location.py  main.py  save.py
app/crawler/: crawl.py  main.py  save.py
