[project]
name = "daangn-crawler"
version = "0.0.1"
description = "A daangn Crawler"
authors = [
    {name = "jwkwon0817",email = "jeewon.kwon.0817@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "questionary (>=2.1.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "selenium (>=4.29.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
